Add fuzzy search utility and update UI files
Added a utility function to sort items based on their similarity with a given query. Several SVG icons were removed from the resource files and two new resource files were added. Also, unnecessary codes in the UI files and cleanup codes in the MainWindow were added.

--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -1,20 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>app.ico</file>
-        <file>sVanillaTitleDark.svg</file>
-        <file>sVanillaTitleLight.svg</file>
-        <file>icon/common/success.svg</file>
-        <file>icon/common/info.svg</file>
-        <file>icon/common/warn.svg</file>
-        <file>icon/common/error.svg</file>
-        <file>icon/common/copy.svg</file>
-        <file>icon/common/cut.svg</file>
-        <file>icon/common/delete.svg</file>
-        <file>icon/common/paste.svg</file>
-        <file>icon/common/redo.svg</file>
-        <file>icon/common/selectAll.svg</file>
-        <file>icon/common/undo.svg</file>
-        <file>icon/common/login.svg</file>
+        <file>appIcon/sVanilla.ico</file>
+        <file>appIcon/white-sVanilla.svg</file>
+        <file>appIcon/sVanilla.svg</file>
+        <file>appIcon/sVanillaTitleDark.svg</file>
+        <file>appIcon/sVanillaTitleLight.svg</file>
         <file>icon/bar/minimize.svg</file>
         <file>icon/bar/maximize.svg</file>
         <file>icon/bar/close.svg</file>
@@ -22,47 +12,53 @@
         <file>icon/bar/setting.svg</file>
         <file>icon/bar/video.svg</file>
         <file>icon/bar/home.svg</file>
-        <file>icon/home/icon.svg</file>
-        <file>icon/home/whiteBg.svg</file>
-        <file>icon/home/search.svg</file>
-        <file>icon/home/clear.svg</file>
-        <file>icon/home/clipboard.svg</file>
-        <file>icon/home/history.svg</file>
-        <file>icon/home/enter.svg</file>
-        <file>icon/home/openurl.svg</file>
-        <file>icon/home/add.svg</file>
-        <file>icon/video/grid.svg</file>
-        <file>icon/video/list.svg</file>
-        <file>icon/video/detail.svg</file>
-        <file>icon/video/download.svg</file>
-        <file>icon/video/close.svg</file>
-        <file>icon/video/reset.svg</file>
-        <file>icon/video/inbox.svg</file>
-        <file>icon/video/addlink.svg</file>
-        <file>icon/download/delete.svg</file>
-        <file>icon/download/start.svg</file>
-        <file>icon/download/pause.svg</file>
-        <file>icon/download/folder.svg</file>
-        <file>icon/download/details.svg</file>
-        <file>icon/download/restart.svg</file>
-        <file>icon/download/downloading.svg</file>
-        <file>icon/download/completed.svg</file>
-        <file>icon/download/waiting.svg</file>
-        <file>icon/download/error.svg</file>
-        <file>icon/download/sort.svg</file>
-        <file>icon/download/filter.svg</file>
-        <file>icon/setting/about.svg</file>
-        <file>icon/setting/author.svg</file>
-        <file>icon/setting/license.svg</file>
-        <file>icon/setting/account.svg</file>
-        <file>icon/setting/advanced.svg</file>
-        <file>icon/setting/default.svg</file>
-        <file>icon/setting/plugin.svg</file>
-        <file>icon/setting/down.svg</file>
-        <file>icon/setting/up.svg</file>
-        <file>icon/website/default.svg</file>
-        <file>icon/website/bilibili.svg</file>
-        <file>CoverSpace.svg</file>
-        <file>sVanilla.svg</file>
+        <file>icon/toast/success.svg</file>
+        <file>icon/toast/info.svg</file>
+        <file>icon/toast/warn.svg</file>
+        <file>icon/toast/error.svg</file>
+        <file>icon/about.svg</file>
+        <file>icon/account.svg</file>
+        <file>icon/advanced.svg</file>
+        <file>icon/author.svg</file>
+        <file>icon/clear.svg</file>
+        <file>icon/clipboard.svg</file>
+        <file>icon/close.svg</file>
+        <file>icon/completed.svg</file>
+        <file>icon/copy.svg</file>
+        <file>icon/cut.svg</file>
+        <file>icon/default.svg</file>
+        <file>icon/defaultCover.svg</file>
+        <file>icon/delete.svg</file>
+        <file>icon/details.svg</file>
+        <file>icon/down.svg</file>
+        <file>icon/download.svg</file>
+        <file>icon/downloading.svg</file>
+        <file>icon/empty.svg</file>
+        <file>icon/enter.svg</file>
+        <file>icon/enter.svg</file>
+        <file>icon/error.svg</file>
+        <file>icon/filter.svg</file>
+        <file>icon/folder.svg</file>
+        <file>icon/grid.svg</file>
+        <file>icon/history.svg</file>
+        <file>icon/inbox.svg</file>
+        <file>icon/info.svg</file>
+        <file>icon/license.svg</file>
+        <file>icon/list.svg</file>
+        <file>icon/login.svg</file>
+        <file>icon/openurl.svg</file>
+        <file>icon/paste.svg</file>
+        <file>icon/pause.svg</file>
+        <file>icon/plugin.svg</file>
+        <file>icon/redo.svg</file>
+        <file>icon/reset.svg</file>
+        <file>icon/restart.svg</file>
+        <file>icon/search.svg</file>
+        <file>icon/selectAll.svg</file>
+        <file>icon/sort.svg</file>
+        <file>icon/start.svg</file>
+        <file>icon/undo.svg</file>
+        <file>icon/up.svg</file>
+        <file>icon/waiting.svg</file>
     </qresource>
 </RCC>
