--- a/sVanilla/src/ClientUi/Setting/About.ui
+++ b/sVanilla/src/ClientUi/Setting/About.ui
@@ -66,7 +66,7 @@
       <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
-         <enum>Qt::Vertical</enum>
+         <enum>Qt::Orientation::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -136,7 +136,7 @@
              <bool>true</bool>
             </property>
             <property name="alignment">
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
             </property>
             <property name="openExternalLinks">
              <bool>true</bool>
@@ -149,7 +149,7 @@
              <string>&lt;a href=&quot;https://svanilla.app/&quot;&gt;QQ群&lt;/a&gt;</string>
             </property>
             <property name="alignment">
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
             </property>
             <property name="openExternalLinks">
              <bool>true</bool>
@@ -159,7 +159,7 @@
           <item row="1" column="4">
            <spacer name="horizontalSpacer_2">
             <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+             <enum>Qt::Orientation::Horizontal</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
@@ -205,15 +205,15 @@
              </size>
             </property>
             <property name="styleSheet">
-             <string notr="true">.QLabel{
-border-image:url(&quot;:/sVanillaTitleLight.svg&quot;);
+             <string notr="true">.QLabel {
+image: url(&quot;:/appIcon/sVanillaTitleLight.svg&quot;);
 }</string>
             </property>
             <property name="text">
              <string/>
             </property>
             <property name="alignment">
-             <set>Qt::AlignCenter</set>
+             <set>Qt::AlignmentFlag::AlignCenter</set>
             </property>
            </widget>
           </item>
@@ -237,7 +237,7 @@ border-image:url(&quot;:/sVanillaTitleLight.svg&quot;);
 hope it accompanies your life like vanilla, bringing a subtle fragrance to your daily routine.</string>
             </property>
             <property name="textFormat">
-             <enum>Qt::AutoText</enum>
+             <enum>Qt::TextFormat::AutoText</enum>
             </property>
            </widget>
           </item>
@@ -409,7 +409,7 @@ hope it accompanies your life like vanilla, bringing a subtle fragrance to your 
              <item>
               <spacer name="horizontalSpacer">
                <property name="orientation">
-                <enum>Qt::Horizontal</enum>
+                <enum>Qt::Orientation::Horizontal</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
@@ -428,7 +428,7 @@ hope it accompanies your life like vanilla, bringing a subtle fragrance to your 
        <item row="4" column="0">
         <spacer name="verticalSpacer_2">
          <property name="orientation">
-          <enum>Qt::Vertical</enum>
+          <enum>Qt::Orientation::Vertical</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
